--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.13",
     "hamburger-react": "^2.4.1",
     "node-sass": "4.14.1",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
